--- a/loading/index.html
+++ b/loading/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>loadding...</h1>  
-  <a href="loding.html"></a>
-  <a href="waiting.html"></a>
+  <a href="loading/loding.html">loading</a> <br>
+  <a href="waiting/waiting.html">waiting</a>
 </body>
 </html>
