--- a/css-portfolio/html-anchor-tags/index.html
+++ b/css-portfolio/html-anchor-tags/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
    <h1>Anchor tags</h1> 
-   <a href="https://www.w3schools.com/tags/tag_a.asp">learn about Anchor tage</a>
+   <a href="">learn about Anchor tage</a>
 </body>
 </html>
