--- a/css-portfolio/css-variable-fonts/index.html
+++ b/css-portfolio/css-variable-fonts/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+
+
     <title>css-variable-fonts</title>
 </head>
 <body>
