--- a/css-portfolio/css-variable-fonts/index.html
+++ b/css-portfolio/css-variable-fonts/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Grandstander:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Grandstander:ital,wght@0,100;1,100&family=Merriweather+Sans:wght@600&display=swap" rel="stylesheet">
 
     <title>css-variable-fonts</title>
 </head>
@@ -18,12 +21,13 @@
 <p class="serif">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet odio ad voluptas nesciunt obcaecati perspiciatis aut dignissimos eum distinctio minus iusto quaerat, eveniet deleniti sunt, neque, cum dolores sit libero?.</p>
 
 
-<p class="sansserif">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, necessitatibus rerum quis reiciendis consequuntur facilis, cumque nobis quae vel officia fugiat veniam sapiente totam accusamus nam optio in explicabo aperiam?
-    .</p>
+<p class="font">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet odio ad voluptas nesciunt obcaecati perspiciatis aut dignissimos eum distinctio minus iusto quaerat, eveniet deleniti sunt, neque, cum dolores sit libero?.</p>
+
+
+<p class="bold">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet odio ad voluptas nesciunt obcaecati perspiciatis aut dignissimos eum distinctio minus iusto quaerat, eveniet deleniti sunt, neque, cum dolores sit libero?.</p>
 
 
 
-<p class="monospace">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut! Vero quia excepturi sint, labore repellat aspernatur sed saepe asperiores? Voluptatibus, praesentium provident quod porro animi cum repellat consequuntur nam.</p>
 
 <a href="../css-pseudo-elements/index.html">go to next bage</a>
 
