--- a/portfolio/Home/index.html
+++ b/portfolio/Home/index.html
@@ -62,7 +62,7 @@
                           <span class="link-img-background">
                             <img src="../image/noun_CSS_2125541.png" alt="car" />  
                           </span>
-                          <span class="link-text"><Css-Animation></Css-Animation></span>
+                          <span class="link-text">css-animation</span>
                         </a>
     
 </body>
