--- a/portfolio/css-animation/index.html
+++ b/portfolio/css-animation/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="https://codepen.io/maryrhanna/pen/QWEBdqB"><css-animation></css-animation></a> 
+  <a href="https://codepen.io/maryrhanna/pen/QWEBdqB">css-animation</a>
 <br>
 <a href="../Home/index.html">Go back Home</a>
 
