--- a/portfolio/Model-box/index.html
+++ b/portfolio/Model-box/index.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <a href="file:///Users/maryhanna/Desktop/web%20dephlper/smart%20phone/webdiv1-20/model-popout%20/index.html">model.box</a>
+    <a href="https://maryhannaa.github.io/webdiv1-20/model-popout%20/">model.box</a>
 
 
 
