--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kingdom Isaac - Portfolio</a>
+      <a class="navbar-brand" href="#">Mary Hanna - Portfolio</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,8 +42,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2" id="banner">
-          <h1 id="banner-name">ORJIEWURU KINGDOM ISAAC</h1>
-          <p class="lead">A full-stack web developer with extensive experience in front-end design/development, back-end development, data visualization, systems integration, relational database systems using SQL and MongoDB.</p>
+          <h1 id="banner-name">Mary Hanna</h1>
+          <p class="lead">Hi, THANKS FOR STOPPING BY. I AM A GRAPHING DESIGNER ENTHUSIAST. I AM PURSUING MY‍BACHELOR AND I AM TRYING TO GET OUT OF MY ‍SHELL AND INTRODUCE THE WORLD TO MY DESIGNS</p>
         </div>
       </div>
     </div>
@@ -55,8 +55,7 @@
     <div class="row">
       <h2 class="text-center title">ABOUT ME</h2>
       <div class="col-xs-12 col-md-6">
-        <img src="https://preview.ibb.co/fi3aSQ/kingdom_isaac_portfolio_zpssmxqoqib.png">
-        <p class="lead text-center">@ Elegushi Beach, Lekki, Lagos - March 2016</p>
+        
       </div>
       <div class="col-xs-12 col-md-6" id="about_col">
         <h3 class="text-center title">A little about me</h3>
