--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -60,7 +60,7 @@
       <div class="col-xs-12 col-md-6" id="about_col">
         <h3 class="text-center title">A little about me</h3>
         <p class="lead">
-          My name is Kingdom Isaac Orjiewuru, a front-end web developer. Am interested in making surfing fun by creating engaging user interfaces and responsive websites. Here a bit about my skills:
+          I am Egyptian girl, who born in Egypt and been there for 12 years. When I came to America, I‍ study graphic design and web , that become my‍ major in the rest of my life. Here a bit about my skills:
         </p>
       </div>
     </div>
@@ -71,53 +71,49 @@
           <p class="lead text-center">HTML</p>
           <div class="progress">
             <div class="progress-bar progress-bar-primary progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 99%">
-              <span class="sr-only">HTML 99%</span>
+              <span class="sr-only">HTML 80%</span>
             </div>
           </div>
           <p class="lead text-center">CSS</p>
           <div class="progress">
             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-              <span class="sr-only">CSS 90%</span>
+              <span class="sr-only">CSS 80%</span>
             </div>
           </div>
           <p class="lead text-center">JavaScript</p>
           <div class="progress">
             <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-              <span class="sr-only">JavaScript 85%</span>
+              <span class="sr-only">JavaScript 5%</span>
             </div>
           </div>
-          <p class="lead text-center">jQuery</p>
+          <p class="lead text-center">Photoshop</p>
           <div class="progress">
             <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-              <span class="sr-only">jQuery 90%</span>
+              <span class="sr-only">Photoshop 80%</span>
             </div>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-6">
-          <p class="lead text-center">AJAX</p>
+          <p class="lead text-center">Illustarter</p>
           <div class="progress">
             <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">AJAX 80%</span>
+              <span class="sr-only">Illustarter 90%</span>
             </div>
           </div>
-          <p class="lead text-center">Node.js</p>
+          <p class="lead text-center">Indesign</p>
           <div class="progress">
             <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">Node.js 80%</span>
+              <span class="sr-only">Indesign 80%</span>
             </div>
           </div>
-          <p class="lead text-center">Express.js</p>
+          <p class="lead text-center">After effects</p>
           <div class="progress">
             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">Express.js 80%</span>
+              <span class="sr-only">After effects 50%</span>
             </div>
           </div>
-          <p class="lead text-center">React.js</p>
-          <div class="progress">
-            <div class="progress-bar progress-bar-primary progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">React.js 80%</span>
-            </div>
+          
           </div>
         </div>
       </div>
