--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -138,25 +138,25 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
-          <p class="lead text-center">Calladom Solutions Ltd.</p>
-          <img src="https://preview.ibb.co/e3CKnQ/calladom.png" class="images">
-          <a id="links" href="https://kingisaac95.github.io/calladom/" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
+          <p class="lead text-center">GYM webside</p>
+          <img src="image/gym.png">
+          <a id="links" href="https://www.behance.net/gallery/95792365/motivation-gym" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
-          <p class="lead text-center">Simple Login Page</p>
-          <img src="https://preview.ibb.co/jp0Qu5/login_zpsibwapeh8.png" class="images">
-          <a id="links" href="https://codepen.io/kingisaac95/full/mEGbGv/" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
+          <p class="lead text-center">Birco</p>
+          <img src="image/birco.png" class="images">
+          <a id="links" href="https://www.behance.net/gallery/95659481/Birco" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
         </div>
       </div>
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
-          <p class="lead text-center">Random Quote Machine</p>
-          <img src="https://preview.ibb.co/gvh5u5/random_quote_zpshghdcmqx.png" class="images">
-          <a id="links" href="https://codepen.io/kingisaac95/full/ZBXQmo/" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
+          <p class="lead text-center">Sticker tata webside</p>
+          <img src="image/sticker tata.png" class="images">
+          <a id="links" href="https://www.behance.net/gallery/95789583/sticker-web" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
         </div>
       </div>
     </div>
