--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -120,21 +120,16 @@
   </section>
   <section class="scroll-panel" id="portfolio">
     <div class="row">
-      <h2 class="text-center title">PORTFOLIO</h2>
+      <h2 class="text-center title">Magic</h2>
       <div class="space"></div>
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
-          <p class="lead text-center">Tribute Page</p>
-          <img src="https://preview.ibb.co/m6eUMk/steve_jobs_new_zpsm86aps6x.jpg" class="images">
-          <a id="links" href="https://codepen.io/kingisaac95/full/VjbpQA/" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
+          <p class="lead text-center">Magic project</p>
+          <img src="image/magic.png" class="images">
+          <a id="links" href="https://www.behance.net/gallery/95662737/Magic" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
-        <div class="thumbnail">
-          <p class="lead text-center">My Portfolio</p>
-          <img src="https://preview.ibb.co/cgrb1k/portfolio_zpszpddezkz.png" class="images">
-          <a id="links" href="https://codepen.io/kingisaac95/full/AXrpVr/" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
-        </div>
+      
       </div>
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
