--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+   
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -25,7 +25,7 @@
       <a class="navbar-brand" href="#">Mary Hanna - Portfolio</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+   
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul id="navbar" class="nav navbar-nav navbar-right">
         <li><a href="#home" data-loc="home">Home</a></li>
@@ -33,8 +33,8 @@
         <li><a href="#portfolio" data-loc="portfolio">Portfolio</a></li>
         <li><a href="#contact" data-loc="contact">Contact</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 <section class="scroll-panel" id="home">
@@ -42,6 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2" id="banner">
+          <img src="image/logo.png">
           <h1 id="banner-name">Mary Hanna</h1>
           <p class="lead">Hi, THANKS FOR STOPPING BY. I AM A GRAPHING DESIGNER ENTHUSIAST. I AM PURSUING MY‍BACHELOR AND I AM TRYING TO GET OUT OF MY ‍SHELL AND INTRODUCE THE WORLD TO MY DESIGNS</p>
         </div>
