--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2" id="banner">
           <img src="image/logo.png">
-          <h1 id="banner-name">Mary Hanna</h1>
+          <h1 id="banner-name"></h1>
           <p class="lead">Hi, THANKS FOR STOPPING BY. I AM A GRAPHING DESIGNER ENTHUSIAST. I AM PURSUING MY‍BACHELOR AND I AM TRYING TO GET OUT OF MY ‍SHELL AND INTRODUCE THE WORLD TO MY DESIGNS</p>
         </div>
       </div>
@@ -56,7 +56,7 @@
     <div class="row">
       <h2 class="text-center title">ABOUT ME</h2>
       <div class="col-xs-12 col-md-6">
-        
+        <img src="image/new image.png">
       </div>
       <div class="col-xs-12 col-md-6" id="about_col">
         <h3 class="text-center title">A little about me</h3>
