--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -121,7 +121,7 @@
   </section>
   <section class="scroll-panel" id="portfolio">
     <div class="row">
-      <h2 class="text-center title">Magic</h2>
+      <h2 class="text-center title">Portfolio</h2>
       <div class="space"></div>
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
@@ -206,7 +206,7 @@
 </div>
 <div class="space"></div>
 <div class="footer">
-  <p class="text-center">Written and coded by <a href="#">Kingdom Isaac</a> &copy; 2016 All Rights Reserved</p>
+  <p class="text-center">Written and coded by.
 </div>
 
 
