--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -151,7 +151,7 @@
       <div class="col-xs-12 col-md-4">
         <div class="thumbnail">
           <p class="lead text-center">Sticker tata webside</p>
-          <img src="image/sticker tata.png" class="images">
+          <img src="image/sticker web.png" class="images">
           <a id="links" href="https://www.behance.net/gallery/95789583/sticker-web" target="_blank"><button class="btn btn-default btn-block">View Project</button></a>
         </div>
       </div>
@@ -206,8 +206,7 @@
 </div>
 <div class="space"></div>
 <div class="footer">
-  <p class="text-center">Written and coded by.
-</div>
+  </div>
 
 
     
