--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="main.js"></script>
+
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
